# Learning

./: a.json  b.json  build.gradle  c.json  gradle.properties  settings.gradle
app/: build.gradle  custom.gradle
ffmpegcommand/: CMakeLists.txt  build.gradle
ffmpegcommand/src/androidTest/java/com/frank/command/: ExampleInstrumentedTest.java
ffmpegcommand/src/main/: AndroidManifest.xml
ffmpegcommand/src/main/cpp/: ffmpeg_cmd.c  ffmpeg_main.c  ffmpeg_main.h
ffmpegcommand/src/main/java/com/frank/callback/: AudioEditImpl.java  HandleCallback.java  VideoCutImpl.java
ffmpegcommand/src/main/java/com/frank/command/: FFMPegAudioEditHelper.java  FFMPegCutHelper.java  FFMPegMain.java  FFMPegType.java  FFmpegCmd.java  FFmpegCutUtil.java  FFmpegUtil.java
ffmpegcommand/src/main/java/com/frank/format/: VideoLayout.java
ffmpegcommand/src/main/jniLibs/3.2.4/include/ffmpegc/: cmdutils.c  config.h  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
ffmpegcommand/src/main/jniLibs/3.2.4/include/libavcodec/: mathops.h
ffmpegcommand/src/main/jniLibs/3.2.4/include/libavcodec/arm64/: mathops.h
ffmpegcommand/src/main/jniLibs/4.1.3/include/ffmpegc/: cmdutils.c  config.h  ffmpeg.c
ffmpegcommand/src/main/jniLibs/4.1.3_x264/include/ffmpegc/: ffmpeg.h  ffmpeg_opt.c
ffmpegcommand/src/main/jniLibs/include/ffmpegc/: cmdutils.c  ffmpeg.c
ffmpegcommand/src/main/jniLibs/include/libavcodec/: mathops.h
ffmpegcommand/src/main/jniLibs/include/libavcodec/avr32/: mathops.h
ffmpegcommand/src/main/jniLibs/include/libavcodec/mips/: mathops.h
ffmpegcommand/src/main/jniLibs/include/libavcodec/x86/: mathops.h
ffmpegcommand/src/main/jniLibs/x264/: build_x264.sh  build_x264_new.sh  x264-snapshot-20191203-2245-stable.tar.bz2
ffmpegcommand/src/main/res/values/: strings.xml
ffmpegcommand/src/test/java/com/frank/command/: ExampleUnitTest.java
medialib/: CMakeLists.txt  build.gradle
medialib/src/main/: AndroidManifest.xml
medialib/src/main/cpp/: AudioMix.c  AudioMix.h  Audio_main.c  Caff.c  Caff.h  Conversion.h  Macro.h  Wav.c  Wav.h  com_czt_mp3recorder_util_LameUtil.h  lame-mp3-utils.cpp  lame_util.c
medialib/src/main/cpp1/: lame-mp3-utils2.cpp  lame_util.c
medialib/src/main/cpp2/: AudioMix.c  Audio_main.c  Caff.h  Conversion.c
medialib/src/main/java/com/czt/mp3recorder/util/: LameUtil.java
medialib/src/main/java/com/medialib/audioedit/bean/: Audio.java  AudioMsg.java  ComposeInfo.java
medialib/src/main/java/com/medialib/audioedit/callback/: DecodeOperateInterface.java
medialib/src/main/java/com/medialib/audioedit/common/: Constant.java
medialib/src/main/java/com/medialib/audioedit/service/: AudioTaskCreator.java  AudioTaskHandler.java  AudioTaskService.java
medialib/src/main/java/com/medialib/audioedit/ssrc/: I0Bessel.java  SSRC.java  SplitRadixFft.java
medialib/src/main/java/com/medialib/audioedit/util/: AudioEditUtil.java  AudioEncodeUtil.java  ByteUtil.java  CommonFunction.java  CrashUtils.java  DecodeEngine.java  FileFunction.java  FileUtils.java  LogUtil.java  MultiAudioMixer.java  ToastUtil.java
medialib/src/main/java/com/medialib/audioedit/util/encode/: AACAudioEncoder.java  AudioEncodeUtil.java  AudioEncoder.java  Mp3AudioEncoder.java
medialib/src/main/java/com/medialib/audioeditc/: AudioMain.java  HandleCallback.java  MixParam.java
medialib/src/main/java/com/medialib/impl/: NativeClipVideoCallback.java
medialib/src/main/java/com/medialib/mp4parser/: Mp4ParserVideoClip.java
medialib/src/main/java/com/medialib/system/: App.java  SystemVideoClip.java
medialib/src/main/java/com/medialib/system/drawer/: TextureRender.java
medialib/src/main/java/com/medialib/system/filter/: AFilter.java  CameraFilter.java  GroupFilter.java  NoFilter.java  OesFilter.java  ProcessFilter.java  RotationOESFilter.java  WaterMarkFilter.java
medialib/src/main/java/com/medialib/system/mediacodec/: InputSurface.java  OutputSurface.java  VideoClipper.java  VideoInfo.java
medialib/src/main/java/com/medialib/system/utils/: DateUtils.java  DensityUtils.java  EasyGlUtils.java  MatrixUtils.java  OpenGlUtils.java  TimeFormatUtils.java
medialib/src/main/res/values/: strings.xml
(+209 files in other folders)
